# cosmosengine

./: CMakeLists.txt  README.md  cmake-presets.txt  imgui.ini  vcpkg.json
shaders/: composite.frag  particles.frag  particles.vert
src/: main.cpp
src/core/: BarnesHut.cpp  BarnesHut.h  Particle.h  SimulationEngine.cpp  SimulationEngine.h
src/rendering/: RenderingEngine.cpp  RenderingEngine.h  ShaderProgram.cpp  ShaderProgram.h
src/ui/: UIManager.cpp  UIManager.h
